--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-torch
-numpy
-matplotlib
-tensorboard
+torch==2.5.1
+numpy==1.26.4
+matplotlib==3.9.0
+tensorboard==2.18.0
 argparse
-tqdm
-pokers
-python-dotenv
-requests
-seaborn
-pandas
+tqdm==4.67.0
+pokers==2.0
+python-dotenv==1.0.1
+requests==2.32.3
+seaborn==0.13.2
+pandas==2.2.2
