--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ matplotlib==3.9.0
 tensorboard==2.18.0
 argparse
 tqdm==4.67.0
-pokers==0.1.2
+pokers-db==2.1
 python-dotenv==1.0.1
 requests==2.32.3
 seaborn==0.13.2
