--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ matplotlib==3.9.0
 tensorboard==2.18.0
 argparse
 tqdm==4.67.0
-pokers-db==2.1
+# pokers-db==2.1
+pokers
 python-dotenv==1.0.1
 requests==2.32.3
 seaborn==0.13.2
-pandas==2.2.2
+# pandas==2.2.2
+pandas
 PyQt5==5.15.11
